--- a/Goal/src/application/MainWindow.fxml
+++ b/Goal/src/application/MainWindow.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 
-<GridPane fx:controller="application.Controler" 
+<!-- Main Window -->
+<GridPane fx:controller="application.Controller" 
     xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
 	<padding><Insets top="25" right="25" bottom="10" left="25"/></padding>
 	
-	<Button text = "+ Goal" onAction = "#addGoal" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+	<Button text = "+ Goal" onAction = "#newGoal" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
 
 </GridPane>
-
