--- a/Goal/src/application/MainWindow.fxml
+++ b/Goal/src/application/MainWindow.fxml
@@ -6,12 +6,14 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 
 <!-- Main Window -->
-<GridPane fx:controller="application.Controller" 
-    xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-	<padding><Insets top="25" right="25" bottom="10" left="25"/></padding>
+<BorderPane fx:controller="application.Controller" 
+    xmlns:fx="http://javafx.com/fxml">
 	
-	<Button text = "+ Goal" onAction = "#newGoal" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+	<left><Button text = "+ Goal" onAction = "#newGoal"/></left>
+	
+	<right><ListView fx:id = "goalList" minWidth = "500"/></right>
 
-</GridPane>
+</BorderPane>
