--- a/Goal/src/application/MainWindow.fxml
+++ b/Goal/src/application/MainWindow.fxml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.*?>
+<?import java.lang.String?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.collections.FXCollections?>
 
 <!-- Main Window -->
-<BorderPane fx:controller="application.Controller" 
+<BorderPane fx:controller="application.MainController" 
     xmlns:fx="http://javafx.com/fxml">
 	
 	<left><Button text = "+ Goal" onAction = "#newGoal"/></left>
